about version mobile view

--- a/HelpAtHappyBalanceBristol/main/index.html
+++ b/HelpAtHappyBalanceBristol/main/index.html
@@ -108,7 +108,8 @@
 </section>
 
 <!-- ABOUT -->
-<section class="about" id="about"
+<!-- DESKTOP VERSION -->
+<section class="about-desktop" id="about-desktop"
          style="background: var(--second-bg-color); display:grid; grid-template-columns:repeat(2,1fr); gap:1rem; padding:110px 16% 90px; align-items:start;">
   
   <div class="about-img" data-aos="zoom-in-down" 
@@ -158,6 +159,37 @@
   </div>
 </section>
 
+<!-- MOBILE VERSION -->
+<section class="about-mobile" id="about-mobile">
+  <div class="about-img" data-aos="zoom-in-down">
+    <img src="./HappyBalanceImages/ClaireSJ2.jpg" alt="About Happy Balance" />
+  </div>
+  <div class="about-info-box">
+    Happy Balance is based in Easton In Gordano BS20 and covers Bristol and North Somerset. To schedule a consultation please contact us via email, phone call, whatsapp, instagram or facebook. 
+  </div>
+
+  <div class="about-text" data-aos="zoom-in-up">
+    <h2>We are <span>declutterers</span></h2>
+    <div class="exp-area">
+      <p>Happy Balance, Claire and SJ, are declutterers and an additional pair of hands to help you:</p>
+      <p>• Declutter</p>
+      <p>• Organise your home and help you create space</p>
+      <p>• Prepare your home for a move/rental/visitors</p>
+      <p>• Sort and prepare an estate so that it is ready for sale</p>
+      <p>Happy Balance declutterers can help you regain control and save you time if you are:</p>
+      <p>• Downsizing, moving house and running out of time?</p>
+      <p>• Need physical and emotional support to sort the property of a deceased relative or non-family member?</p>
+      <p>• Realising you have no time for managing your home – you have a loft, garage, playroom or house that needs decluttering and sorting?</p>
+      <p>• Working full-time which means you have no time to declutter and organise as weekends with family and friends takes priority?</p>
+      <p>• Just feeling overwhelmed and need some help?</p>
+      <p>• Wanting to recycle wherever possible and work with companies that up-cycle unwanted items </p>
+    </div>
+  </div>
+
+  <div class="about-cta">
+    <a href="#contact" class="btn">Contact us</a>
+  </div>
+</section>
 
 <!-- REVIEWS -->
 <section class="reviews" id="reviews" style="padding:110px 16% 90px;">
