--- a/HelpAtHappyBalanceBristol/main/index.html
+++ b/HelpAtHappyBalanceBristol/main/index.html
@@ -191,57 +191,90 @@
   </div>
 </section>
 
-<!-- REVIEWS -->
-<section class="reviews" id="reviews" style="padding:110px 16% 90px;">
-  <div class="center-text" data-aos="fade-down" style="text-align:center; margin-bottom: 60px;">
-    <h2 style="font-size:2.9rem; margin:0;">Our <span style="color:#59C4F0;">Reviews</span></h2>
+<!-- REVIEWS DESKTOP -->
+<section id="reviews-desktop" class="reviews-desktop">
+  <div class="center-text" data-aos="fade-down">
+    <h2>Our <span>Reviews</span></h2>
   </div>
 
-  <!-- Carousel container -->
-  <div class="reviews-carousel" data-aos="zoom-in-up" style="position:relative; display:flex; align-items:center; justify-content:center;">
-
-    <!-- Arrow Left -->
+  <div class="reviews-carousel">
     <button class="carousel-arrow left"><i class="ri-arrow-left-line"></i></button>
 
-    <!-- Cards wrapper (viewport) with background -->
-    <div class="reviews-wrapper" style="overflow:hidden; width:70%; max-width:900px; background: var(--second-bg-color); padding:60px 0; border-radius:20px;">
-      <!-- Track -->
-      <div class="reviews-track" style="display:flex; transition:transform 0.5s ease; gap:32px;">
+    <div class="reviews-wrapper">
+      <div class="reviews-track">
+        <div class="review-card box">
+          <h3>Claire Quinn</h3>
+          <p>Thank you so much Happy Balance AKA Claire & SJ! You cleared and sorted my dad’s bungalow without any fuss or stress. Very professional, sensitive, and easy to be around. Highly recommend!</p>
+        </div>
 
-        <!-- Review cards -->
-<!-- Review cards -->
-<div class="review-card box">
-  <h3>Claire Quinn</h3>
-  <p>Thank you so much Happy Balance AKA Claire & SJ! You cleared and sorted my dad’s bungalow without any fuss or stress. Very professional, sensitive, and easy to be around. Highly recommend!</p>
-</div>
+        <div class="review-card box">
+          <h3>Hannah Turner</h3>
+          <p>A big thank you to Claire and SJ for organising a great afternoon and collecting heaps of clothing and other items for the homeless in Bristol. Amazing service!</p>
+        </div>
 
-<div class="review-card box">
-  <h3>Hannah Turner</h3>
-  <p>A big thank you to Claire and SJ for organising a great afternoon and collecting heaps of clothing and other items for the homeless in Bristol. Amazing service!</p>
-</div>
+        <div class="review-card box">
+          <h3>Suzy Burrows</h3>
+          <p>Claire & SJ helped me move abroad by sorting a “garage from hell,” making tip and charity runs, and even helping sell items online. Calm, helpful, hardworking, and great value. Highly recommend!</p>
+        </div>
 
-<div class="review-card box">
-  <h3>Suzy Burrows</h3>
-  <p>Claire & SJ helped me move abroad by sorting a “garage from hell,” making tip and charity runs, and even helping sell items online. Calm, helpful, hardworking, and great value. Highly recommend!</p>
-</div>
+        <div class="review-card box">
+          <h3>Jan Moulds</h3>
+          <p>Happy Balance sorted my clutter and apartment, helping me feel happier and more organised. Claire & SJ are truly caring and professional. I’m a better person thanks to them!</p>
+        </div>
 
-<div class="review-card box">
-  <h3>Jan Moulds</h3>
-  <p>Happy Balance sorted my clutter and apartment, helping me feel happier and more organised. Claire & SJ are truly caring and professional. I’m a better person thanks to them!</p>
-</div>
-
-<div class="review-card box">
-  <h3>Mandy Risso</h3>
-  <p>Claire & SJ helped me plan a charity Race Night for Parkinsons UK and ‘For Ethiopia.’ They thought of everything, executed brilliantly, and the feedback from guests was incredible. Simply amazing!</p>
-</div>
-
+        <div class="review-card box">
+          <h3>Mandy Risso</h3>
+          <p>Claire & SJ helped me plan a charity Race Night for Parkinsons UK and ‘For Ethiopia.’ They thought of everything, executed brilliantly, and the feedback from guests was incredible. Simply amazing!</p>
+        </div>
       </div>
     </div>
 
-    <!-- Arrow Right -->
     <button class="carousel-arrow right"><i class="ri-arrow-right-line"></i></button>
   </div>
 </section>
+
+<!-- REVIEWS MOBILE -->
+<section id="reviews-mobile" class="reviews-mobile">
+  <div class="center-text" data-aos="fade-down">
+    <h2>Our <span>Reviews</span></h2>
+  </div>
+
+  <div class="reviews-carousel">
+    <button class="carousel-arrow left"><i class="ri-arrow-left-line"></i></button>
+
+    <div class="reviews-wrapper">
+      <div class="reviews-track">
+        <div class="review-card box">
+          <h3>Claire Quinn</h3>
+          <p>Thank you so much Happy Balance AKA Claire & SJ! You cleared and sorted my dad’s bungalow without any fuss or stress. Very professional, sensitive, and easy to be around. Highly recommend!</p>
+        </div>
+
+        <div class="review-card box">
+          <h3>Hannah Turner</h3>
+          <p>A big thank you to Claire and SJ for organising a great afternoon and collecting heaps of clothing and other items for the homeless in Bristol. Amazing service!</p>
+        </div>
+
+        <div class="review-card box">
+          <h3>Suzy Burrows</h3>
+          <p>Claire & SJ helped me move abroad by sorting a “garage from hell,” making tip and charity runs, and even helping sell items online. Calm, helpful, hardworking, and great value. Highly recommend!</p>
+        </div>
+
+        <div class="review-card box">
+          <h3>Jan Moulds</h3>
+          <p>Happy Balance sorted my clutter and apartment, helping me feel happier and more organised. Claire & SJ are truly caring and professional. I’m a better person thanks to them!</p>
+        </div>
+
+        <div class="review-card box">
+          <h3>Mandy Risso</h3>
+          <p>Claire & SJ helped me plan a charity Race Night for Parkinsons UK and ‘For Ethiopia.’ They thought of everything, executed brilliantly, and the feedback from guests was incredible. Simply amazing!</p>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-arrow right"><i class="ri-arrow-right-line"></i></button>
+  </div>
+</section>
+
 
 
 <!-- CONTACT SECTION -->
