mobile about page fix

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Document</title>
+  <title>Happy Balance Bristol | Bristol Declutterers</title>
 
   <!-- boxicons / remix icons -->
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -66,11 +66,12 @@
 
   <div class="main-content" data-aos="fade-in" style="flex:1;">
     <h4 style="margin:0 0 8px; font-size:1.6rem;">Hi, There!</h4>
-    <h1 style="margin:20px 0; line-height:1.2; font-size:4.5rem; font-weight:900;">
-      We are <span style="color:#59C4F0;">Claire</span> and <span style="color:#59C4F0;">SJ</span>
-    </h1>
+    <h2 style="margin:20px 0; line-height:1.2; font-size:4.5rem; font-weight:900;">
+      We are
+    </h2>
+    <h1> <span style="color:#59C4F0;">Happy</span> <span style="color:#808080;">BALANCE</span></h1>
     <p style="max-width:620px; line-height:30px; color:#000;">
-      Together we are Happy Balance declutterers
+      A decluttering company in Bristol run by Claire and SJ since 2016
     </p>
 
     <div class="social" style="display:flex; gap:17px; margin:40px 0;">
