--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/png" href="./HappyBalanceImages/favicon-32x32.png" />
   <title>Happy Balance Bristol | Bristol Declutterers</title>
 
   <!-- boxicons / remix icons -->
