--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
       <!-- WhatsApp -->
       <a href="#contact" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});"
         aria-label="Scroll to contact section to message us on WhatsApp" title="WhatsApp">
-        <i class="ri-whatsapp-fill"></i>
+        <i class="ri-WhatsApp-fill"></i>
       </a>
 
       <!-- Instagram -->
-      <a href="https://www.instagram.com/happybalance_247" target="_blank"
+      <a href="https://www.Instagram.com/happybalance_247" target="_blank"
         aria-label="Visit Happy Balance Instagram page" title="Instagram">
-        <i class="ri-instagram-fill"></i>
+        <i class="ri-Instagram-fill"></i>
       </a>
 
       <!-- Facebook -->
-      <a href="https://www.facebook.com/happybalancebristol" target="_blank"
+      <a href="https://www.Facebook.com/happybalancebristol" target="_blank"
         aria-label="Visit Happy Balance Facebook page" title="Facebook">
-        <i class="ri-facebook-fill"></i>
+        <i class="ri-Facebook-fill"></i>
       </a>
     </div>
 
@@ -145,7 +145,7 @@
                 border:7px solid #59C4F0; box-shadow:0 0 20px #59C4F0; position:relative; top:0;" />
     
     <div class="about-info-box">
-      Happy Balance is based in Easton In Gordano BS20 and covers Bristol and North Somerset. To schedule a consultation please contact us via email, phone call, whatsapp, instagram or facebook. 
+      Happy Balance is based in Easton-In-Gordano BS20 and covers Bristol and North Somerset. To schedule a consultation please contact us via email, phone call, WhatsApp, Instagram or Facebook. 
     </div>
   </div>
 
@@ -190,7 +190,7 @@
     <img src="./HappyBalanceImages/ClaireSJ2.jpg" alt="About Happy Balance Bristol" />
   </div>
   <div class="about-info-box">
-    Happy Balance is based in Easton In Gordano BS20 and covers Bristol and North Somerset. To schedule a consultation please contact us via email, phone call, whatsapp, instagram or facebook. 
+    Happy Balance is based in Easton In Gordano BS20 and covers Bristol and North Somerset. To schedule a consultation please contact us via email, phone call, WhatsApp, Instagram or Facebook. 
   </div>
 
   <div class="about-text" data-aos="zoom-in-up">
@@ -389,10 +389,10 @@ form.addEventListener('submit', async (e) => {
     <span aria-label="Email: help@happybalancebristol.co.uk">help@happybalancebristol.co.uk</span>
   </div>
 
-  <div class="contact-item" onclick="window.open('https://www.instagram.com/happybalance_247', '_blank')" 
+  <div class="contact-item" onclick="window.open('https://www.Instagram.com/happybalance_247', '_blank')" 
        aria-label="Instagram. Click to open Happy Balance Instagram in a new tab.">
     <div class="contact-icon">
-      <i class="ri-instagram-fill" aria-hidden="true"></i>
+      <i class="ri-Instagram-fill" aria-hidden="true"></i>
     </div>
     <span aria-label="Instagram handle: happybalance_247">happybalance_247</span>
   </div>
@@ -400,7 +400,7 @@ form.addEventListener('submit', async (e) => {
   <div class="contact-item" onclick="window.open('https://wa.me/+447412010800', '_blank')" 
        aria-label="WhatsApp. Click to open WhatsApp chat in a new tab.">
     <div class="contact-icon">
-      <i class="ri-whatsapp-fill" aria-hidden="true"></i>
+      <i class="ri-WhatsApp-fill" aria-hidden="true"></i>
     </div>
     <span>
       <span class="phone-number" onclick="window.open('https://wa.me/+447412010800', '_blank')" 
